# faasm

./: .clang-tidy  .dockerignore  .env  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  conan-profile-aarch64.txt  docker-compose-cloudlab.yml  docker-compose-compute-node.yml  docker-compose-compute.yml  docker-compose-dev.yml  docker-compose-storage-node.yml  docker-compose-storage.yml  docker-compose.yml  faasm.ini  reqs.txt  requirements.txt  thread-sanitizer-ignorelist.txt
.VSCodeCounter/2023-12-18_12-00-19/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
ansible/: bare_metal_base.yml  llvm.yml  local_dev.yml
benchmarking/: process_wordcount.py  run_benchmark_in_container.sh  run_wordcount.sh  wordcount_100.csv  wordcount_benchmark.py
cmake/: ExternalProjects.cmake  FindSGX.cmake
deploy/: cloudlab.xml  cloudlab_profile.py
deploy/conf/: hosts  nginx-local.conf  redis-volatile.conf
deploy/conf/ceph/: ceph.conf
deploy/local/: dev_cluster.sh
docker/: base-runtime.dockerfile  base.dockerfile  ceph-base-new.dockerfile  ceph-base.dockerfile  ceph.dockerfile  cli.dockerfile  cpp-root.dockerfile  faabric-base-runtime.dockerfile  faabric-base.dockerfile  faabric-mpi-native.dockerfile  faabric.dockerfile  minio.dockerfile  sgx.dockerfile  upload.dockerfile  worker-storage.dockerfile  worker.dockerfile
docs/: index.rst  releases.md
docs/source/: development.md  ndp.md  releases.md
examples/: CMakeLists.txt  server.cpp
experiments/: monitor_cpu_utilisation.sh  monitor_disk_throughput.sh  readme.txt  test_read.csv
experiments/gutenberg/: gen_shakespeare_large.sh
experiments/results/: readme.txt
faasmcli/: requirements.txt
faasmcli/faasmcli/tasks/: __init__.py  benchmark.py  call.py  dev.py  docker_tasks.py  redis.py
faasmcli/faasmcli/util/: benchmarking.py  call.py  endpoints.py  env.py  http.py  load_balance_policy.py
include/cephclass/: cephcomm.h
include/codegen/: MachineCodeGenerator.h
include/conf/: FaasmConfig.h
include/faabric/endpoint/: Endpoint.h  FaabricEndpoint.h  FaabricEndpointHandler.h  macros.h
include/faabric/mpi-native/: MpiExecutor.h
include/faabric/proto/: faabric.pb.h
include/faabric/redis/: Redis.h
include/faabric/scheduler/: ExecutorFactory.h  FunctionCallApi.h  FunctionCallClient.h  FunctionCallServer.h  Scheduler.h
include/faabric/snapshot/: SnapshotRegistry.h
include/faabric/transport/: MessageEndpoint.h  context.h
include/faabric/util/: bytes.h  config.h  crash.h  delta.h  files.h  func.h  gids.h  locks.h  logging.h  memory.h  queue.h  snapshot.h  timing.h  userfaultfd.h
include/faaslet/: Faaslet.h
include/runner/: runner_common.h
include/storage/: FileLoader.h  S3Wrapper.h
include/wamr/: WAMRWasmModule.h
include/wasm/: UffdMemoryArenaManager.h  WasmModule.h  chaining.h  ndp.h
include/wavm/: NdpBuiltinModule.h  WAVMWasmModule.h
mpi-native/: mpi-native.env
mpi-native/examples/: CMakeLists.txt
src/cephclass/: CMakeLists.txt  cephclass.cpp  cephcomm.fbs
src/codegen/: CMakeLists.txt  MachineCodeGenerator.cpp
src/conf/: CMakeLists.txt  FaasmConfig.cpp
src/endpoint/: CMakeLists.txt  Endpoint.cpp  FaabricEndpoint.cpp  FaabricEndpointHandler.cpp
src/faaslet/: CMakeLists.txt  Faaslet.cpp
src/flat/: CMakeLists.txt
src/mpi_native/: CMakeLists.txt
src/proto/: CMakeLists.txt  faabric.proto
src/redis/: CMakeLists.txt  Redis.cpp
src/runner/: CMakeLists.txt  FaabricMain.cpp  MicrobenchRunner.cpp  codegen_func.cpp  codegen_shared_obj.cpp  func_runner.cpp  func_sym.cpp  microbench_runner.cpp  pool_runner.cpp  runner_common.cpp
src/scheduler/: CMakeLists.txt  Executor.cpp  FunctionCallClient.cpp  FunctionCallServer.cpp  MpiWorld.cpp  Scheduler.cpp
src/sgx/: CMakeLists.txt  SGXWAMRWasmModule.cpp
src/snapshot/: CMakeLists.txt  SnapshotRegistry.cpp
src/state/: CMakeLists.txt
src/storage/: CMakeLists.txt  FileLoader.cpp  S3Wrapper.cpp
src/system/: CMakeLists.txt  NetworkNamespace.cpp
src/threads/: CMakeLists.txt
src/transport/: CMakeLists.txt  MessageEndpoint.cpp  MessageEndpointClient.cpp  MessageEndpointServer.cpp  context.cpp
src/upload/: CMakeLists.txt  UploadServer.cpp
src/util/: CMakeLists.txt  bytes.cpp  config.cpp  crash.cpp  delta.cpp  files.cpp  func.cpp  gids.cpp  json.cpp  logging.cpp  memory.cpp
src/wamr/: CMakeLists.txt  WAMRWasmModule.cpp  codegen.cpp  pthread.cpp
src/wasm/: CMakeLists.txt  UffdMemoryArenaManager.cpp  WasmExecutionContext.cpp  WasmModule.cpp  chaining_util.cpp  ndp_endpoint.cpp
src/wavm/: CMakeLists.txt  IRModuleCache.cpp  NdpBuiltinModule.cpp  WAVMModuleCache.cpp  WAVMWasmModule.cpp  codegen.cpp  faasm.cpp  memory.cpp  ndp_objects.cpp  syscalls.cpp  syscalls.h  threads.cpp
tasks/: container.py  dev.py  docker.py
tests/test/: CMakeLists.txt
tests/test/codegen/: test_machine_code_generator.cpp
tests/test/endpoint/: test_endpoint_api.cpp  test_handler.cpp
tests/test/faaslet/: test_flushing.cpp
tests/test/scheduler/: test_executor.cpp  test_executor_context.cpp  test_scheduler.cpp
tests/test/transport/: test_point_to_point.cpp
tests/test/upload/: test_upload.cpp
tests/test/util/: test_delta.cpp  test_snapshot.cpp
tests/test/wamr/: test_wamr.cpp
tests/test/wasm/: test_snapshots.cpp
tests/test/wavm/: test_module_cache.cpp
tests/utils/: CMakeLists.txt  DummyExecutor.cpp  DummyExecutor.h  DummyExecutorFactory.cpp  DummyExecutorFactory.h  fixtures.h
util/: requests.sh
